--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -31,7 +31,9 @@
                 android:layout_width="170dp"
                 android:layout_height="match_parent"
                 android:onClick="onSearch"
-                android:text="@string/search_btn" />
+                android:text="@string/search_btn"
+                android:textSize="15sp"
+                android:background="@drawable/buttonshape"/>
 
         </LinearLayout>
 
