Fix all warnings

--- a/app/src/main/res/layout/activity_drawing_maps.xml
+++ b/app/src/main/res/layout/activity_drawing_maps.xml
@@ -7,9 +7,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,44 +18,44 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/AddCircleBtn"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:text="@string/Add_Circle_text_btn"
                 android:onClick="Add_Circle_clicked"
                 android:textSize="15sp"
-                android:background="@drawable/buttonshape1"/>
+                android:background="@drawable/buttonshape1"
+                tools:ignore="ButtonStyle" />
 
             <Button
-                android:id="@+id/Add_Polyline_btn"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="Add_Polyline_Clicked"
                 android:text="@string/Add_Polyline_btnTxt"
                 android:textSize="15sp"
-                android:background="@drawable/buttonshape1"/>
+                android:background="@drawable/buttonshape1"
+                tools:ignore="ButtonStyle" />
 
             <Button
-                android:id="@+id/Add_Polygon_btn"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="draw_Polygon_Clicked"
                 android:text="@string/add_polygon_text_btn"
                 android:textSize="15sp"
-                android:background="@drawable/buttonshape1"/>
+                android:background="@drawable/buttonshape1"
+                tools:ignore="ButtonStyle" />
 
 
             <Button
-                android:id="@+id/Remove_Polyline_btn"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/remove_All_button"
                 android:onClick="Remove_clicked"
                 android:textSize="15sp"
-                android:background="@drawable/buttonshape1"/>
+                android:background="@drawable/buttonshape1"
+                tools:ignore="ButtonStyle" />
 
 
         </LinearLayout>
