--- a/app/src/main/res/layout/activity_street_view.xml
+++ b/app/src/main/res/layout/activity_street_view.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
-        android:id="@+id/linearLayout">
+        tools:ignore="UselessLeaf">
 
 
     </LinearLayout>
