--- a/app/src/main/res/layout/activity_street_view_menu.xml
+++ b/app/src/main/res/layout/activity_street_view_menu.xml
@@ -12,7 +12,7 @@
         android:id="@+id/SVM_search_txt"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:hint="חפש כתובת"
+        android:hint="@string/svm_text"
         tools:layout_editor_absoluteY="171dp"
         tools:layout_editor_absoluteX="67dp"
         android:layout_alignParentTop="true"
@@ -20,10 +20,9 @@
         android:layout_marginTop="137dp" />
 
     <Button
-        android:id="@+id/SVM_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="חפש"
+        android:text="@string/svm_button"
         android:onClick="Button_clicked"
         tools:layout_editor_absoluteY="265dp"
         tools:layout_editor_absoluteX="142dp"
