--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -33,7 +32,7 @@
                 android:onClick="onSearch"
                 android:text="@string/search_btn"
                 android:textSize="15sp"
-                android:background="@drawable/buttonshape"/>
+                android:background="@drawable/buttonshape1"/>
 
         </LinearLayout>
 
